--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ padding: 40px;
   font-size: 60px;
 }
 
-.unit{
+.units{
 position: relative;
   font-size: 14px;
   top: -10px;
@@ -61,4 +61,15 @@ position: relative;
   background-color: #ffc93c;
   border-color: #ffc93c;
   color: #fff;
+}
+
+.units .active{
+color: white;
+text-decoration: none;
+
+}
+
+ .active:hover{
+text-decoration: none;
+
 }
